--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 PORT = 3000
-MONGO_URI =mongodb+srv://aleksander:12345678a@cluster0.g8d3k.mongodb.net/storybooks?retryWrites=true&w=majority
+MONGO_URI =
 GOOGLE_CLIENT_ID =570254985004-kfrgm6d0vf811e1q4vnc0de99nviae90.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET =lRiTUjLZCX-dXgIdY6tHPMQ_
